Added Vagrantfile & provisioning script; Directory re-structure

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@ nothing fancy going on here.
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Richard Willis - Freelance Web Developer</title>
     <meta
       name="description"
