--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@ nothing fancy going on here.
       name="description"
       content="Personal Site of Richard Willis, Freelance Web Developer" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="build/modernizr.js"></script>
   </head>
   <body>
 
@@ -37,16 +38,34 @@ nothing fancy going on here.
     <section class="container box">
       <h1>Welcome</h1>
       <p>
-        Hi, my name is Richard Willis. I am a freelance Web Developer in London.
+        Hi, my name is Richard Willis, I'm a freelance Web Developer in London.
         This site serves as an overview of the skills I offer, and the experience
         I have.
       </p>
       <p>Primarily, I offer my skills as an experienced
-      front-end developer, but I can't help having a keen interest in the entire stack.</p>
+      front-end developer, but I have a keen interest in the entire stack.</p>
     </section>
 
-    <section class="container box">
-      <h1>Skills</h1>
+    <ul class="features">
+      <li>
+        <a href="#">Skills</a>
+      </li>
+      <li>
+        <a href="#">Experience</a>
+      </li>
+      <li>
+        <a href="#">Qualifications</a>
+      </li>
+      <li>
+        <a href="#">Showcase</a>
+      </li>
+      <li>
+        <a href="#">Community involvement</a>
+      </li>
+    </ul>
+
+    <section class="container box hide">
+      <h1>Core Skills</h1>
       <p>A very basic overview:</p>
       <ul>
         <li>Front-end web development:
@@ -75,7 +94,7 @@ nothing fancy going on here.
       </footer>
     </section>
 
-    <section class="container box">
+    <section class="container box hide">
       <h1>Experience</h1>
       <p>I have worked for small and large agencies, as well as government founded projects.</p>
       <ul>
@@ -88,16 +107,16 @@ nothing fancy going on here.
       </ul>
     </section>
 
-    <section class="container box">
+    <section class="container box hide">
       <h1>Qualifications</h1>
       <p>I own a HND in Software Development. I majored in C# and Java, and acheived a distinction.</p>
     </section>
 
-    <section class="container box">
+    <section class="container box hide">
       <h1>Involvement in the Community</h1>
     </section>
 
-    <section class="container box">
+    <section class="container box hide">
       <h1>Interests and hobbies</h1>
       <ul>
         <li>Cycling (I really really <a href="#">love my bike</a>)</li>
