--- a/public/index.html
+++ b/public/index.html
@@ -35,34 +35,39 @@ nothing fancy going on here.
       </ul>
     </nav>
 
-    <section class="container box">
-      <h1>Welcome</h1>
-      <p>
-        Hi, my name is Richard Willis, I'm a freelance Web Developer in London.
-        This site serves as an overview of the skills I offer, and the experience
-        I have.
-      </p>
-      <p>Primarily, I offer my skills as an experienced
-      front-end developer, but I have a keen interest in the entire stack.</p>
-    </section>
+    <div class="container">
 
-    <ul class="features">
-      <li>
-        <a href="#">Skills</a>
-      </li>
-      <li>
-        <a href="#">Experience</a>
-      </li>
-      <li>
-        <a href="#">Qualifications</a>
-      </li>
-      <li>
-        <a href="#">Showcase</a>
-      </li>
-      <li>
-        <a href="#">Community involvement</a>
-      </li>
-    </ul>
+      <section class="box">
+        <h1>Welcome</h1>
+        <p>
+          Hi, my name is Richard Willis, I'm a freelance Web Developer in London.
+          This site serves as an overview of the skills I offer, and the experience
+          I have.
+        </p>
+        <p>Primarily, I offer my skills as an experienced
+        front-end developer, but I have a keen interest in the entire stack.</p>
+      </section>
+    </div>
+
+    <div class="container">
+      <ul class="features">
+        <li>
+          <a href="#"><span>Skills</span></a>
+        </li>
+        <li>
+          <a href="#"><span>Experience</span></a>
+        </li>
+        <li>
+          <a href="#"><span>Qualifications</span></a>
+        </li>
+        <li>
+          <a href="#"><span>Showcase</span></a>
+        </li>
+        <li>
+          <a href="#"><span>Community involvement</span></a>
+        </li>
+      </ul>
+    </div>
 
     <section class="container box hide">
       <h1>Core Skills</h1>
