--- a/public/showcase.html
+++ b/public/showcase.html
@@ -12,15 +12,16 @@
   <body>
     <div class="container">
       <header class="header">
-        <h1>Richard Willis</h1>
+        <h1><a href="/">Richard Willis</a></h1>
         <h2>Freelance Web Developer</h2>
       </header>
       <section class="section">
-        <h2>Introduction</h2>
-        <p>
-          Welcome. Please have a look at some of <a href="showcase.html">my work</a>, my <a href="/contact.html">contact details</a>
-          or my <a href="/cv">CV</a>.
-        </p>
+        <h2>Showcase</h2>
+        <div class="content-block">
+          <p>
+            Welcome. Please have a look at some of <a href="showcase.html">my work</a> or my <a href="#">contact details</a>.
+          </p>
+        </div>
       </section>
     </div>
   </body>
